--- a/bases/data-science-project/add-model-job.yml
+++ b/bases/data-science-project/add-model-job.yml
@@ -20,7 +20,7 @@ spec:
         - -ec
         - |-
           curl -LO https://ai-on-openshift.io/odh-rhods/img-triton/card.fraud.detection.onnx
-          python3 -c 'filename = "card.fraud.detection.onnx"; import boto3, os; s3 = boto3.client("s3"); f = open(filename, "rb"); s3.upload_fileobj(f, os.getenv["AWS_S3_BUCKET"], filename); f.close()'
+          python3 -c 'filename = "card.fraud.detection.onnx"; import boto3, os; s3 = boto3.client("s3"); f = open(filename, "rb"); s3.upload_fileobj(f, os.getenv("AWS_S3_BUCKET"), filename); f.close()'
         envFrom:
         - secretRef:
             name: aws-connection-minio
