--- a/bases/data-science-project/add-model-job.yml
+++ b/bases/data-science-project/add-model-job.yml
@@ -20,7 +20,18 @@ spec:
         - -ec
         - |-
           curl -LO https://ai-on-openshift.io/odh-rhods/img-triton/card.fraud.detection.onnx
-          python3 -c 'filename = "card.fraud.detection.onnx"; import boto3, os; s3 = boto3.client("s3"); f = open(filename, "rb"); s3.upload_fileobj(f, os.getenv("AWS_S3_BUCKET"), filename); f.close()'
+          cat << 'EOF' | python3
+          filename = "card.fraud.detection.onnx"
+          import boto3, os
+          s3 = boto3.client("s3",
+                            endpoint_url=os.getenv("AWS_S3_ENDPOINT"),
+                            aws_access_key_id=os.getenv("AWS_ACCESS_KEY_ID"),
+                            aws_secret_access_key=os.getenv("AWS_SECRET_ACCESS_KEY"))
+          with open(filename, "rb") as f:
+            s3.upload_fileobj(f,
+                              os.getenv("AWS_S3_BUCKET"),
+                              filename)
+          EOF
         envFrom:
         - secretRef:
             name: aws-connection-minio
