--- a/bases/data-science-project/add-model-job.yml
+++ b/bases/data-science-project/add-model-job.yml
@@ -27,10 +27,11 @@ spec:
                             endpoint_url=os.getenv("AWS_S3_ENDPOINT"),
                             aws_access_key_id=os.getenv("AWS_ACCESS_KEY_ID"),
                             aws_secret_access_key=os.getenv("AWS_SECRET_ACCESS_KEY"))
+          bucket = os.getenv("AWS_S3_BUCKET")
+          if bucket not in [bu["Name"] for bu in s3.list_buckets()["Buckets"]]:
+            s3.create_bucket(Bucket=bucket)
           with open(filename, "rb") as f:
-            s3.upload_fileobj(f,
-                              os.getenv("AWS_S3_BUCKET"),
-                              filename)
+            s3.upload_fileobj(f, bucket, filename)
           EOF
         envFrom:
         - secretRef:
