--- a/bases/data-science-project/add-model-job.yml
+++ b/bases/data-science-project/add-model-job.yml
@@ -31,7 +31,7 @@ spec:
           if bucket not in [bu["Name"] for bu in s3.list_buckets()["Buckets"]]:
             s3.create_bucket(Bucket=bucket)
           with open(filename, "rb") as f:
-            s3.upload_fileobj(f, bucket, filename)
+            s3.upload_fileobj(f, bucket, f'fraud/{filename}')
           EOF
         envFrom:
         - secretRef:
