--- a/bases/data-science-project/setup-serviceaccount.yml
+++ b/bases/data-science-project/setup-serviceaccount.yml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: serving-demo-setup
+  name: serving-demo-gitops-setup
   annotations:
     argocd.argoproj.io/sync-wave: "1"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: serving-demo-setup-cluster-reader
+  name: serving-demo-gitops-setup-cluster-reader
   annotations:
     argocd.argoproj.io/sync-wave: "1"
 roleRef:
@@ -18,5 +18,5 @@ roleRef:
   name: cluster-admin
 subjects:
 - kind: ServiceAccount
-  name: serving-demo-setup
-  namespace: serving-demo
+  name: serving-demo-gitops-setup
+  namespace: serving-demo-gitops
