--- a/bases/data-science-project/add-model-job.yml
+++ b/bases/data-science-project/add-model-job.yml
@@ -9,8 +9,8 @@ spec:
   backoffLimit: 4
   template:
     spec:
-      serviceAccount: serving-demo-setup
-      serviceAccountName: serving-demo-setup
+      serviceAccount: serving-demo-gitops-setup
+      serviceAccountName: serving-demo-gitops-setup
       initContainers:
       - name: wait-for-imagestream
         image: image-registry.openshift-image-registry.svc:5000/openshift/tools:latest
