--- a/bases/data-science-project/create-data-connection.yml
+++ b/bases/data-science-project/create-data-connection.yml
@@ -44,6 +44,6 @@ spec:
             AWS_SECRET_ACCESS_KEY: ${secret}
             AWS_DEFAULT_REGION: us
             AWS_S3_ENDPOINT: http://minio.minio.svc:9000
-            AWS_S3_BUCKET: serving-demo
+            AWS_S3_BUCKET: serving-demo-gitops
           EOF
       restartPolicy: Never
