--- a/bases/data-science-project/kustomization.yml
+++ b/bases/data-science-project/kustomization.yml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: serving-demo
+namespace: serving-demo-gitops
 
 commonLabels:
   component: data-science-project
