--- a/bootstrap/bases/argoapp/application.yml
+++ b/bootstrap/bases/argoapp/application.yml
@@ -12,6 +12,7 @@ spec:
   source:
     repoURL: 'https://github.com/rh-aiservices-bu/custom-serving-runtime-gitops-example.git'
     path: overlays/default
+    ## change that to "main" when this gets merged back into the main branch.
     targetRevision: adapt-post-fork
   syncPolicy:
     automated:
