--- a/bases/data-science-project/create-data-connection.yml
+++ b/bases/data-science-project/create-data-connection.yml
@@ -20,12 +20,12 @@ spec:
         - -ec
         - |-
           echo -n "Waiting for minio-root-user."
-          while [ -z "$(oc get secret -n minio minio-root-user -oname 2>/dev/null)" ]; do
+          while [ -z "$(oc get secret -n serving-demo-gitops minio-root-user -oname 2>/dev/null)" ]; do
             echo -n '.'
             sleep 1
           done; echo
-          id=$(oc get secret -n minio minio-root-user -ogo-template='{{.data.MINIO_ROOT_USER|base64decode}}')
-          secret=$(oc get secret -n minio minio-root-user -ogo-template='{{.data.MINIO_ROOT_PASSWORD|base64decode}}')
+          id=$(oc get secret -n serving-demo-gitops minio-root-user -ogo-template='{{.data.MINIO_ROOT_USER|base64decode}}')
+          secret=$(oc get secret -n serving-demo-gitops minio-root-user -ogo-template='{{.data.MINIO_ROOT_PASSWORD|base64decode}}')
           echo "Creating secret for ${id}"
           cat << EOF | oc apply -f-
           apiVersion: v1
